VZDEV/src/objects/CCPM_storeEmployee__c.object
<CustomObject>
    <fields>
        <fullName>CCPM_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if employee is active for that store</description>
        <label>Active ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_IsUpdateFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUpdateFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_PreviousRole__c</fullName>
        <label>PreviousRole</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store Manager</fullName>
                </value>
                <value>
                    <fullName>Assistant Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_StoreID__c</fullName>
        <formula>CCPM_Store__r.CCPM_storeID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_Store__c</fullName>
        <label>Store</label>
        <referenceTo>CCPM_Store__c</referenceTo>
        <relationshipLabel>Store Employees</relationshipLabel>
        <relationshipName>Store_Employees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CCPM_employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>CCPM Sales Rep,CCPM Retail Sales Rep,CCPM Retail Store Management,CCPM Retail District Management,CCPM Telesales Rep,CCPM Telesales Supervisor,CCPM Telesales Management</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Store_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_isStoreActive__c</fullName>
        <formula>CCPM_Store__r.CCPM_IsActive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Store Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_previousactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Containing active flags for previous isactive value of store employee</description>
        <label>PreviousIsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store Manager</fullName>
                </value>
                <value>
                    <fullName>Assistant Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_storeSource__c</fullName>
        <formula>CCPM_Store__r.CCPM_source__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_uniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CCPM_uniqueStoreEmployeeID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Store Employee ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isactivetest__c</fullName>
        <formula>CCPM_employee__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isactivetest</label>
        <type>Checkbox</type>
    </fields>
    <label>Store Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>Store employee #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>